News UAT/force-app/main/default/objects/QA_Checklist__c/QA_Checklist__c.object-meta.xml
<CustomObject>
    <label>QA Checklist</label>
    <nameField>
        <label>QA Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>