News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF(Campaign_Order__c &lt;&gt; null, HYPERLINK(Campaign_Order__r.Account__c , Campaign_Order__r.Account__r.Name), HYPERLINK(Product_Order__r.Order__r.Account__c , Product_Order__r.Order__r.Account__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>