News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Is_QA_performed_for_me__c.field-meta.xml
<CustomField>
    <fullName>Is_QA_performed_for_me__c</fullName>
    <formula>QA_Performed_For__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is QA performed for me</label>
    <type>Checkbox</type>
</CustomField>