News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Number_of_Failed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Failed__c</fullName>
    <label>Number of Failed</label>
    <summaryFilterItems>
        <field>QA_Item__c.Result__c</field>
        <operation>equals</operation>
        <value>Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>QA_Item__c.QA_Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>