News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <summaryFilterItems>
        <field>QA_Item__c.Result__c</field>
        <operation>notEqual</operation>
        <value>N/A</value>
    </summaryFilterItems>
    <summaryForeignKey>QA_Item__c.QA_Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>