News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>IF(Campaign_Order__c &lt;&gt; null, HYPERLINK(Campaign_Order__r.Opportunity__c , Campaign_Order__r.Opportunity__r.Name), HYPERLINK(Product_Order__r.Order__r.Opportunity__c , Product_Order__r.Order__r.Opportunity__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>