News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Order</label>
    <referenceTo>Product_Order__c</referenceTo>
    <relationshipLabel>QA Checklists</relationshipLabel>
    <relationshipName>QA_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>