News UAT/force-app/main/default/objects/QA_Checklist__c/fields/QA_Manager__c.field-meta.xml
<CustomField>
    <fullName>QA_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>