News UAT/force-app/main/default/objects/QA_Checklist__c/fields/QA_Performed_For__c.field-meta.xml
<CustomField>
    <fullName>QA_Performed_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Performed For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>