News UAT/force-app/main/default/objects/QA_Checklist__c/fields/QA_Performed_For_My_Team__c.field-meta.xml
<CustomField>
    <fullName>QA_Performed_For_My_Team__c</fullName>
    <formula>IF(CONTAINS( $UserRole.Name ,&#39;Campaign-Social&#39;) &amp;&amp; (CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Campaign&#39;) || CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Social&#39;)), true, IF(CONTAINS( $UserRole.Name ,&#39;Social&#39;) &amp;&amp; CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Xtend - Social&#39;), true , IF(CONTAINS( $UserRole.Name ,&#39;Campaign L2&#39;), IF(CONTAINS( $UserRole.Name ,&#39;KA-North&#39;),CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Team KA&#39;) || CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Team North&#39;) || QA_Performed_For__r.Id = $User.Id, CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Team DSP&#39;) || CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Team South&#39;) || QA_Performed_For__r.Id = $User.Id) , IF(CONTAINS( $UserRole.Name ,&#39;SEM L1&#39;) &amp;&amp; CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;SEM&#39;), true, IF(CONTAINS( $UserRole.Name ,&#39;SEM L2&#39;) &amp;&amp; CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;SEM&#39;) &amp;&amp; NOT(CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;L1&#39;)), IF(NOT(CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;L2&#39;)), true, QA_Performed_For__r.Id = $User.Id) , IF(CONTAINS( $UserRole.Name ,&#39;Programmatic L1&#39;) &amp;&amp; CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Programmatic&#39;), true , IF(CONTAINS($UserRole.Name,&#39;Programmatic L2&#39;) &amp;&amp; CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;Programmatic&#39;),((NOT(CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;L2&#39;))&amp;&amp;((CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;KA&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;KA&#39;)) || (CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;NSW&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;NSW&#39;)) || (CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;QLD&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;QLD&#39;)) || (CONTAINS(QA_Performed_For__r.UserRole.Name,&#39;VIC/SA&#39;) &amp;&amp; CONTAINS($UserRole.Name,&#39;VIC/SA&#39;)))) || QA_Performed_For__r.Id = $User.Id), QA_Performed_For__r.Id = $User.Id) ) ) )) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Performed For My Team</label>
    <type>Checkbox</type>
</CustomField>