News UAT/force-app/main/default/objects/QA_Checklist__c/fields/QA_Score__c.field-meta.xml
<CustomField>
    <fullName>QA_Score__c</fullName>
    <label>QA Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>