News UAT/force-app/main/default/objects/QA_Checklist__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
                <default>true</default>
                <label>Evaluation</label>
            </value>
            <value>
                <fullName>Client Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>