News UAT/force-app/main/default/objects/QA_Checklist__c/validationRules/QA_Manager_needs_to_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Manager_needs_to_be_populated</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; QA_Manager__c == null</errorConditionFormula>
    <errorDisplayField>QA_Manager__c</errorDisplayField>
    <errorMessage>Please populate QA Manager for this checklist.</errorMessage>
</ValidationRule>